# CastleEscape

./: .cproject  .gitignore  .project  LICENSE  Makefile  README.md  attribedit.c  ayfxplay.asm  bank1.c  bank2.c  border.asm  brick.h  brick1.asm  cls.asm  coins.asm  defs.asm  displayScreen.asm  displaybcd.asm  displayscreen.asm  eggs.asm  font.asm  formatASM.sh  gamemain.asm  hearts.asm  isr.asm  items.asm  keyboardscan.asm  lantern.asm  levels.asm  levels.inc  main.c  playercollision.asm  score.asm  screen1.asm  screentab.asm  screentab.c  screentab.h  scrollmessage.asm  sprite.asm  stackinit.asm  (+4 more)
.github/workflows/: blank.yml  build.yml  develop.yml
assets/: .gitignore  CastleEscape.fx  Makefile  RightAnimation-a.xcf  RightAnimation.xcf  banner.asm  banner.csv  banner.tmx  csv2asm.sh  cvs2bin.py  death.wyz  jinj_med.wyz  levels.csv  levels.tmx  mainmenu.xcf  sprite.sh  sprites.xcf  template1.xcf  tiles.sh  title.xcf  weeknight.xcf
assets/gimp/: RightAnimation-a.xcf  SMS_Sprites.xcf  ZXN_Sprites.xcf  animation.xcf  mainmenu.xcf  mainmenu2.xcf  template2.xcf  tilesheet.xcf  title.xcf  title2.xcf
assets/scripts/: checkExterns.sh  csv2asm.sh  genSprites.sh  tilesheet.sh  tmx2asm.sh  xcf2layers.sh  xcf2png.sh
assets/sounds/: CastleEscape.ins  gothic.wyz
assets/tiled/: banner.tmx  levels.tmx
assets/zxn/: sprites.spr  tiles.pal  tiles.spr
sprite/: LeftSprite0.h  LeftSprite1.h  LeftSprite6.h  LeftSprite7.h
src/: .gitignore  CMakeLists.txt  Makefile  attribedit.c  ayfxplay.asm  bankedcall.asm  banner.asm  banner.inc  banner.nxm  border.asm  checkExterns.sh  cls.asm  coins.asm  definekeys.asm  defs.asm  defs.inc  die.asm  displaybcd.asm  displayhex.asm  displayscreen.asm  displaytilemap.asm  dzx0_standard.asm  eggs.asm  font.asm  gamemain.asm  getMain.sh  heapcheck.asm  hearts.asm  isr.asm  items.asm  kempston.asm  keyboardscan.asm  knight.asm  lantern.asm  levels.asm  levels.inc  levels.nxm  loader.asm  loader.bas  main.c  (+30 more)
src/bin2rem/: .gitignore  Makefile  bin2rem.cpp  bin2rem.txt
src/crt/: crt.asm  ld_bytes.asm
src/music/: CastleEscape.mus.inc
src/sprite/: LeftFallKnight.inc  LeftFallKnight.raw  LeftJumpKnight.inc  LeftJumpKnight.raw  LeftKnight.inc  LeftKnight.raw  LeftSprite.c  LeftSprite2.h  LeftSprite3.h  LeftSprite4.h  LeftSprite5.h  RightFallKnight.inc  RightFallKnight.raw  RightJumpKnight.inc  RightJumpKnight.raw  RightKnight.inc  RightKnight.raw  RightSprite.c  RightSprite0.h  RightSprite1.h  RightSprite2.h  RightSprite3.h  RightSprite4.h  RightSprite5.h  RightSprite6.h  RightSprite7.h  ZXN_Sprites.nxp  ZXN_Sprites.spr  ZXN_tilesheet.nxp  ZXN_tilesheet.nxt  ZXS_tilesheet.nxt  sprites.inc  sprites.spr  tilesheet.inc  tilesheet.nxp  tilesheet.nxt  tilesheet_zxn.inc
src/tiles/: tile0.h  tile1.h  tile10.h  tile101.h  tile103.h  tile104.h  tile105.h  tile106.h  tile107.h  tile109.h  tile11.h  tile110.h  tile111.h  tile112.h  tile114.h  tile115.h  tile116.h  tile118.h  tile119.h  tile12.h  tile120.h  tile121.h  tile122.h  tile123.h  tile124.h  tile125.h  tile126.h  tile127.h  tile13.h  tile130.h  tile131.h  tile133.h  tile134.h  tile137.h  tile138.h  tile139.h  tile14.h  tile140.h  tile141.h  tile142.h  (+96 more)
tiles/: tile0.h  tile1.h  tile10.h  tile100.h  tile101.h  tile102.h  tile103.h  tile104.h  tile105.h  tile106.h  tile107.h  tile108.h  tile109.h  tile11.h  tile110.h  tile111.h  tile112.h  tile113.h  tile114.h  tile115.h  tile116.h  tile117.h  tile118.h  tile119.h  tile12.h  tile120.h  tile121.h  tile122.h  tile123.h  tile124.h  tile125.h  tile126.h  tile127.h  tile128.h  tile129.h  tile13.h  tile130.h  tile131.h  tile132.h  tile133.h  (+121 more)
